多セッション実行可能にした．

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <th><input name="br12" value="1" min="1" max="6" type="number"></th>
     </tr>
     </tbody></table>
-    実験モード<input name="hyouka" id="isexam" value="1" type="checkbox">
+    <!-- 実験モード<input name="hyouka" id="isexam" value="1" type="checkbox"> -->
+     Room Name<input id="room" size="30"  value="1" type="text">
+
     <br>
 </div>
 <div id="joining-button">
